--- a/docs/常用网站.md
+++ b/docs/常用网站.md
@@ -1,3 +1,6 @@
 - 常用网址
   - [百度](https://www.baidu.com)
   - [Google](https://www.google.com/)
+- 经典文档
+  - [快速入门](/快速入门.md)
+  - [:cn:](/自定义导航栏.md)
