--- a/常用网站.md
+++ b/常用网站.md
@@ -1,6 +1,5 @@
-- 常用网址
+- 常用网站
   - [百度](https://www.baidu.com)
   - [Google](https://www.google.com/)
 - 经典文档
-  - [快速入门](/快速入门.md)
-  - [:cn:](/自定义导航栏.md)
+  - [常用网站](/常用网站.md)
