新增谷歌分析插件

--- a/开发工具.md
+++ b/开发工具.md
@@ -1,11 +1,17 @@
-#### 开发工具
+#### 代码管理
+- [Github](https://github.com/)
+- [Gitee](https://gitee.com/)
+- [Gitlab](https://gitlab.com/)
 
+
+#### 代码分享
 - [carbon--创建源代码的精美图像](https://carbon.now.sh/)
-  
-  
-  
-  
-  
-  
-  
+
+
+#### 文档管理
+- [语雀](https://www.yuque.com/)
+
+
+#### 开放平台
+- [微信公众平台](https://mp.weixin.qq.com/)
   
