--- a/前端组件.md
+++ b/前端组件.md
@@ -4,6 +4,8 @@
 - [Lightvue--轻量级支持vue3.x&&2.x](https://lightvue.org/getting-started/installation)
 - [Buefy--轻量级支持vue2.6+](https://buefy.org/documentation)
 - [KPC--Kingcloud Design，金山云设计UI，支持vue3.x&&2.x&&react](https://design.ksyun.com/)
+- [Vuetify--基于Vue.js精心打造UI组件库，Material风格](https://vuetifyjs.com/zh-Hans/)
+- [Naive UI--一款基于当前比较新的 Vue 3.0/TypeScript 技栈开发的前端 UI 组件库](https://www.naiveui.com/)
 
 #### 小程序 UI
 
@@ -22,3 +24,16 @@
 #### 图表库
 
 - [Echarts--一个基于JavaScript的开源可视化图表库](https://echarts.apache.org/zh/index.html)
+
+
+#### vue插件
+
+- [Pinia--Vue轻量级状态管理库](https://pinia.vuejs.org/)
+- [Trois--基于Three.JS的Vue3可视化库](https://troisjs.github.io/guide/)
+- [Vue-Grid-Layout--一个可拖拽网格布局系统](https://jbaysolutions.github.io/vue-grid-layout/) 
+- [Vue-Draggable--是一个基于Sortable.js的Vue拖拽组件](https://sortablejs.github.io/Vue.Draggable)
+- [Vue-Tour--一个轻量级、简单且可定制的导览插件](https://pulsardev.github.io/vue-tour/)
+- [Tiptap--基于 Vue 的无渲染的富文本编辑器](https://github.com/ueberdosis/tiptap)
+- [Quill.js--一个具有跨平台和跨浏览器支持的富文本编辑器](https://github.com/quilljs/quill/)
+- [TinyMCE--富文本编辑器](https://github.com/tinymce/tinymce)
+- [CKEditor5--一个强大的富文本编辑器框架，具有模块化架构、现代集成和协作编辑等功能](https://github.com/ckeditor/ckeditor5)
