--- a/学习阅读.md
+++ b/学习阅读.md
@@ -4,3 +4,5 @@
 - [掘金](https://juejin.cn/)
 - [微信阅读](https://weread.qq.com/)
 - [infoQ](https://www.infoq.cn/)
+- [后盾人](https://doc.houdunren.com/)
+- [bugstack--重学Java设计模式](https://bugstack.cn/)
