--- a/开发工具.md
+++ b/开发工具.md
@@ -12,6 +12,21 @@
 - [语雀](https://www.yuque.com/)
 
 
+#### 变量翻译
+- [变量生成助手](http://fanyi.timymy.com/)
+
+
+
 #### 开放平台
 - [微信公众平台](https://mp.weixin.qq.com/)
+  
+
+#### 项目文档
+- [docsify](https://docsify.js.org/#/zh-cn/)
+- [liteflow](https://liteflow.yomahub.com/)
+- [poi-tl--Word模板引擎，基于Apache POI](http://deepoove.com/poi-tl/)
+- [kkfileview--文件文档在线预览解决方案](https://kkfileview.keking.cn/zh-cn/index.html)
+- [hutool--小而全的Java工具类库](https://hutool.cn/docs/#/)
+- [easypoi--快速使用poi完成Excel和word的各种操作](http://doc.wupaas.com/docs/easypoi/easypoi-1c0u4mo8p4ro8)
+- [XXL开源社区--由职业研发人员倾情打造，致力于提供多领域的开源技术方案](https://www.xuxueli.com/)
   
