--- a/开发工具.md
+++ b/开发工具.md
@@ -3,6 +3,12 @@
 - [Gitee](https://gitee.com/)
 - [Gitlab](https://gitlab.com/)
 
+#### 代码分享
+- [华为云镜像--镜像文件下载](https://mirrors.huaweicloud.com/home)
+- [阿里云镜像--镜像文件下载](https://developer.aliyun.com/mirror/)
+
+
+
 
 #### 代码分享
 - [carbon--创建源代码的精美图像](https://carbon.now.sh/)
