新增接口分类

--- a/前端组件.md
+++ b/前端组件.md
@@ -10,6 +10,8 @@
 #### 小程序 UI
 
 - [Vant Weapp--轻量、可靠的小程序 UI 组件库](https://vant-contrib.gitee.io/vant-weapp/#/home)
+- [WeUI--基于样式库weui-wxss开发的小程序扩展组件库，同微信原生视觉体验一致的UI组件库](https://wechat-miniprogram.github.io/weui/docs)
+
 
 #### Web UI
 
@@ -37,3 +39,4 @@
 - [Quill.js--一个具有跨平台和跨浏览器支持的富文本编辑器](https://github.com/quilljs/quill/)
 - [TinyMCE--富文本编辑器](https://github.com/tinymce/tinymce)
 - [CKEditor5--一个强大的富文本编辑器框架，具有模块化架构、现代集成和协作编辑等功能](https://github.com/ckeditor/ckeditor5)
+- [Vue Flow--支持Vue3的可视化流程引擎](https://vueflow.dev/)
