--- a/图标图库.md
+++ b/图标图库.md
@@ -14,3 +14,9 @@
 
 - [unsplash--无版权图库](https://unsplash.com/)
 - [pexels--图片素材](https://www.pexels.com/zh-cn/)
+
+
+#### 特殊字符
+
+- [unicode-symbol](https://ajlovechina.github.io/awesome-unicode-symbol/index.html)
+- [符号大全](http://www.fhdq.net/)
