--- a/设计工具.md
+++ b/设计工具.md
@@ -1,3 +1,6 @@
 #### 设计平台
 - [幕客--全能设计协作平台RP&DT](https://www.mockplus.cn/)
 - [墨刀--产品设计协作平台](https://modao.cc/)
+
+#### 图片处理
+- [upscayl--一个开源软件，可以将图片从低分辨率变成高分辨率，变得更清晰](https://github.com/upscayl/upscayl)
