--- a/开发工具.md
+++ b/开发工具.md
@@ -18,7 +18,7 @@
 
 #### 文档管理
 - [语雀](https://www.yuque.com/)
-
+- [速查表](http://quickref.mofe.io/)
 
 #### 变量翻译
 - [变量生成助手](http://fanyi.timymy.com/)
