--- a/学习阅读.md
+++ b/学习阅读.md
@@ -6,3 +6,4 @@
 - [infoQ](https://www.infoq.cn/)
 - [后盾人](https://doc.houdunren.com/)
 - [bugstack--重学Java设计模式](https://bugstack.cn/)
+- [ins--开源灵感数据库](https://github.com/zhaoolee/ins)
