--- a/设计工具.md
+++ b/设计工具.md
@@ -1,6 +1,10 @@
 #### 设计平台
 - [幕客--全能设计协作平台RP&DT](https://www.mockplus.cn/)
 - [墨刀--产品设计协作平台](https://modao.cc/)
+- [可画canva--在线设计协作平台](https://www.canva.cn/)
+- [colorfu--做壁纸和海报，免费开源](https://github.com/pearmini/colorfu)
+
+
 
 #### 图片处理
 - [upscayl--一个开源软件，可以将图片从低分辨率变成高分辨率，变得更清晰](https://github.com/upscayl/upscayl)
