--- a/日常工具.md
+++ b/日常工具.md
@@ -1,3 +1,10 @@
 #### 文件处理
 
 - [Pdf24--免费且易于使用的在线PDF工具](https://tools.pdf24.org/zh/)
+
+
+
+#### 工具
+
+- [sqlzoo--一个免费的SQL学习练习网站](https://sqlzoo.net/wiki/SELECT_basics/zh)
+- [humanbenchmark--人类基准反应时间测试](https://humanbenchmark.com/tests/reactiontime)
