--- a/开发工具.md
+++ b/开发工具.md
@@ -38,8 +38,10 @@
 #### 项目文档
 - [docsify](https://docsify.js.org/#/zh-cn/)
 - [liteflow](https://liteflow.yomahub.com/)
+- [spring-file-storage--在SpringBoot中通过简单的方式将文件存储到 本地、FTP、SFTP、阿里云OSS、华为云OBS、七牛云Kodo、腾讯云COS、百度云 BOS、MinIO、等其它兼容 S3 协议的平台](https://spring-file-storage.xuyanwu.cn/#/)
 - [poi-tl--Word模板引擎，基于Apache POI](http://deepoove.com/poi-tl/)
 - [kkfileview--文件文档在线预览解决方案](https://kkfileview.keking.cn/zh-cn/index.html)
 - [hutool--小而全的Java工具类库](https://hutool.cn/docs/#/)
 - [easypoi--快速使用poi完成Excel和word的各种操作](http://doc.wupaas.com/docs/easypoi/easypoi-1c0u4mo8p4ro8)
 - [XXL开源社区--由职业研发人员倾情打造，致力于提供多领域的开源技术方案](https://www.xuxueli.com/)
+- [relationship--中国亲戚关系计算器,开源算法](https://passer-by.com/relationship/)
