--- a/社区论坛.md
+++ b/社区论坛.md
@@ -3,3 +3,4 @@
 - [v2ex](https://www.v2ex.com/)
 - [discord](https://discord.com/)
 - [codenews--一个国人分享技术工具的社区](https://codenews.cc/)
+- [HamZone--中国业余无线电爱好者交流社区](https://bbs.hamzone.cn/)
