--- a/前端组件.md
+++ b/前端组件.md
@@ -1,3 +1,5 @@
+> 分类：前端组件
+
 #### Vue UI
 - [ElementUI](https://element.eleme.cn/#/zh-CN/component/installation)
 - [Lightvue--轻量级支持vue3.x&&2.x](https://lightvue.org/getting-started/installation)
