--- a/欢迎投递.md
+++ b/欢迎投递.md
@@ -1,7 +1,8 @@
+> 分类：欢迎投递
+
 #### 欢迎投递资源
 
-
-###### 一、邮件格式：
+###### 一、投递格式：
     1.资源类型： （....前端组件|社区论坛|开发工具|图标图库|设计工具）自行对应Nav网站的分类列表；
     2.简要描述：简单描述一下网页的功能；
     3.网页网址：例如：http://nav.chlinlearn.cloud/
@@ -9,3 +10,4 @@
 
 ###### 二、投递方式
     1.邮件： chlinlearn@qq.com
+    2.公众号私信：chlinlearn
