--- a/图标图库.md
+++ b/图标图库.md
@@ -10,7 +10,7 @@
 - [Bootstrap Icons--Bootstrap 开源的 SVG 图标库](https://icons.getbootstrap.com/#usage)
 - [Svgrepo--SVG图标](https://www.svgrepo.com/)
 - [Icongo--开源的图标搜索引擎](https://icongo.github.io/)
-
+- [Free3Dicon--3D icon图标](https://free3dicon.com/)
 
 #### 图库
 
