--- a/配色工具.md
+++ b/配色工具.md
@@ -2,4 +2,6 @@
 
 - [Color Hunt](https://colorhunt.co/)
 - [设计师网址导航--配色](https://color.uisdc.com/pick.html)
+- [khroma--AI配色](http://khroma.co/train/)
+
   
