--- a/学习阅读.md
+++ b/学习阅读.md
@@ -9,3 +9,4 @@
 - [后盾人](https://doc.houdunren.com/)
 - [bugstack--重学Java设计模式](https://bugstack.cn/)
 - [ins--开源灵感数据库](https://github.com/zhaoolee/ins)
+- [句子控--收集与分享你喜欢的句子](https://www.juzikong.com/)
