--- a/前端组件.md
+++ b/前端组件.md
@@ -11,6 +11,7 @@
 
 
 #### 小程序 UI
+- [TDesign小程序组件库--腾讯的设计系统 TDesign 适配微信小程序的组件库](https://github.com/Tencent/tdesign-miniprogram)
 - [Vant Weapp--轻量、可靠的小程序 UI 组件库](https://vant-contrib.gitee.io/vant-weapp/#/home)
 - [WeUI--基于样式库weui-wxss开发的小程序扩展组件库，同微信原生视觉体验一致的UI组件库](https://wechat-miniprogram.github.io/weui/docs)
 - [heyui-wechat--基于微信小程序原生语法,实现的CSS UI框架](https://github.com/geekxzClub/heyui-wechat)
