--- a/日常工具.md
+++ b/日常工具.md
@@ -6,10 +6,12 @@
 #### 工具箱
 - [帮小忙--腾讯在线工具箱平台](https://tool.browser.qq.com/)
 - [在线工具--在线程序员工具箱](https://tool.lu/)
-
+- [密码学工具箱](https://crypto-online.cn/)
+  
 #### 工具
 - [sqlzoo--一个免费的SQL学习练习网站](https://sqlzoo.net/wiki/SELECT_basics/zh)
 - [humanbenchmark--人类基准反应时间测试](https://humanbenchmark.com/tests/reactiontime)
 - [jsont--JSON在线查看、xml/yaml转换](https://www.jsont.run/)
 - [json可视化--json可视化渲染成表格](https://altearius.github.io/tools/json/index.html)
-- [Device Frames--制作智能手机、平板电脑、笔记本的 3D 展示图片](https://deviceframes.com/))
+- [Device Frames--制作智能手机、平板电脑、笔记本的 3D 展示图片](https://deviceframes.com/)
+
