--- a/社区论坛.md
+++ b/社区论坛.md
@@ -6,5 +6,5 @@
 - [discord](https://discord.com/)
 - [codenews--一个国人分享技术工具的社区](https://codenews.cc/)
 - [HamZone--中国业余无线电爱好者交流社区](https://bbs.hamzone.cn/)
-- [AE博客](http://www.aeink.com/)0
+- [AE博客](http://www.aeink.com/)
 - [站酷--发现更好的设计，原创设计交流社区](https://www.zcool.com.cn/)
