--- a/tool/小功能匣子.md
+++ b/tool/小功能匣子.md
@@ -1,7 +1,4 @@
-<!-- <div style="display:flex;justify-content:center;margin-top:20%"><font size="40">倘若代码和注释不一致，那么很可能两者都是错的。</font></div>
-
-<center><font size="5">---Norm Schryer</font></center> -->
-
+> 位置：工具>小功能匣子
 
 <p style="display:flex;justify-content:center;margin-top:15%;font-size:30px">免费工具推荐</p>
 
