--- a/设计工具.md
+++ b/设计工具.md
@@ -3,13 +3,23 @@
 #### 设计平台
 - [幕客--全能设计协作平台RP&DT](https://www.mockplus.cn/)
 - [墨刀--产品设计协作平台](https://modao.cc/)
+- [penpot](https://design.penpot.app/)
+- [pixso](https://pixso.cn/)
 
 #### 图片处理
 - [制作图](https://www.zhizuotu.com/)
 - [可画canva--在线设计协作平台](https://www.canva.cn/)
 - [colorfu--做壁纸和海报，免费开源](https://github.com/pearmini/colorfu)
+- [基于fabric.js和Vue的图片编辑器](https://github.com/nihaojob/vue-fabric-editor)
 
 
 
 #### 图片处理
 - [upscayl--一个开源软件，可以将图片从低分辨率变成高分辨率，变得更清晰](https://github.com/upscayl/upscayl)
+
+
+#### 小程序组件
+- [wx-caman--基于 CamanJS 的微信小程序 Canvas 像素级滤镜处理库](https://github.com/ChrisCindy/wx-caman)
+- [wxapp-market--小程序营销组件](https://github.com/o2team/wxapp-market)
+- [sprite-wxapp--小程序的图形绘制和实现各种动画效果](https://github.com/spritejs/sprite-wxapp)
+- [Painter--一款轻量级的小程序海报生成组件](https://github.com/Kujiale-Mobile/Painter)
