--- a/开源项目.md
+++ b/开源项目.md
@@ -3,6 +3,32 @@
 #### 开源组织
 - [dromara](https://dromara.org/zh/projects/)
 
-
 #### 开源项目
 - [物联网开发板模拟器](https://wokwi.com/)
+- [Administrative-divisions-of-China--行政区划（五级）：省级、地级、县级、乡级和村级数据](https://gitee.com/modood/Administrative-divisions-of-China/)
+- [stonedtx--是一款开源免费的舆情系统，支持本地化部署。支持对海量的舆情数据进行交叉分析和深度挖掘,为用户提供全面的舆情数据,专业的舆情分析，快速的舆情处理等服务](https://gitee.com/stonedtx/yuqing/)
+- [GeekDesk--极客桌面](https://gitee.com/BookerLiu/GeekDesk/)
+- [xJsonKit--超轻量级JSON/JSONB/XML/YAML的正序列化与反序列化的门面框架](https://gitee.com/troyzhxu/xjsonkit/)
+- [orion-ops--一站式自动化运维及自动化部署平台](https://gitee.com/lijiahangmax/orion-ops/)
+- [docpreview--文件在线预览模块（多格式转 PDF 文件）](https://gitee.com/hcwdc/docpreview/)
+- [CosId--通用、灵活、高性能的分布式ID生成器](https://gitee.com/AhooWang/CosId/)
+- [lunar-java--一款无第三方依赖的公历(阳历)、农历(阴历、老黄历)、道历、佛历工具](https://gitee.com/6tail/lunar-java/)
+- [Luckysheet--一款纯前端类似excel的在线表格](https://gitee.com/mengshukeji/Luckysheet/)
+
+#### 低代码项目
+- [dooringx--开箱即用的H5可视化搭建框架，轻松搭建自己的可视化搭建平台](https://gitee.com/lowcode-china/dooringx)
+- [cola-designer--基于vue2.0，拖拽式网站设计器、大屏设计器](https://gitee.com/colaiven/cola-designer/)
+
+#### 后端模板项目
+- [surveyking--功能最强大的调查问卷系统和考试系统](https://gitee.com/surveyking/surveyking/)
+- [ruoyi--基于 Vue/Element UI 和 Spring Boot/Spring Cloud & Alibaba 前后端分离的分布式微服务架构](http://doc.ruoyi.vip/)
+
+#### 前端模板项目
+- [vue-admin-better](https://github.com/chuzhixin/vue-admin-better)
+- [vue-element-admin](https://github.com/PanJiaChen/vue-element-admin)
+- [vue-vben-admin](https://github.com/vbenjs/vue-vben-admin)
+- 
+#### 工作流项目
+- [json-flow--审批工作流自研引擎系统](https://jackrolling.gitee.io/docsify/#/)
+- [smart-flow-design--仿钉钉、飞书、雀书、流程审批设计](https://gitee.com/crowncloud/smart-flow-design/)
+  
