--- a/前端组件.md
+++ b/前端组件.md
@@ -8,7 +8,7 @@
 - [Vuetify--基于Vue.js精心打造UI组件库，Material风格](https://vuetifyjs.com/zh-Hans/)
 - [Naive UI--一款基于当前比较新的 Vue 3.0/TypeScript 技栈开发的前端 UI 组件库](https://www.naiveui.com/)
 - [HeyUI--一个基于Vue.js的高质量UI组件库,支持vue2&vue3](https://www.heyui.top/)
-
+- [Undraw UI--一个 Vue 3 组件库,基于vue3的UI组件，主要功能有折叠，评论，锚点，搜索，聊天](https://undraw.gitee.io/undraw-ui/)
 
 #### 小程序 UI
 - [TDesign小程序组件库--腾讯的设计系统 TDesign 适配微信小程序的组件库](https://github.com/Tencent/tdesign-miniprogram)
@@ -28,7 +28,7 @@
 - [uView--全面兼容nvue的uni-app生态框架，多平台快速开发的UI框架](https://www.uviewui.com/)
 - [uni-ui--uniapp扩展组件](https://uniapp.dcloud.net.cn/component/)
 - [ColorUI--CSS UI框架](https://gitee.com/weilanwl/ColorUI)
-
+- [tmui--基于UNIAPP的VUE3 TypeScript的跨端组件，支持nvue原生渲染,H5,小程序,安卓,IOS等全端组件库](https://tmui.design/)
 
 #### 图表库
 - [Echarts--一个基于JavaScript的开源可视化图表库](https://echarts.apache.org/zh/index.html)
@@ -45,7 +45,14 @@
 - [TinyMCE--富文本编辑器](https://github.com/tinymce/tinymce)
 - [CKEditor5--一个强大的富文本编辑器框架，具有模块化架构、现代集成和协作编辑等功能](https://github.com/ckeditor/ckeditor5)
 - [Vue Flow--支持Vue3的可视化流程引擎](https://vueflow.dev/)
-
+- [ueditor-plus--基于 UEditor 二次开发的富文本编辑器](https://gitee.com/modstart-lib/ueditor-plus/)
+- [am-editor--一个富文本实时协同编辑器框架](https://gitee.com/aomao/am-editor/)
+- [vue3-tree-org--基于vue3.x + typeScript 实现的组织架构图](https://gitee.com/sangtian152/vue3-tree-org/)
 
 #### 样式大全
 - [navnav--组件样式开发学习](https://navnav.co/)
+
+
+#### JavaScript
+- [Fasty--一个极快的 JavaScript 模板引擎](https://gitee.com/fuhai/fasty/)
+- [cnchar--功能全面、多端支持的汉字拼音笔画 js 库](https://gitee.com/theajack/cnchar/)
