--- a/图标图库.md
+++ b/图标图库.md
@@ -8,6 +8,7 @@
 #### 图标
 
 - [Iconfont--阿里巴巴图标库](https://www.iconfont.cn/)
+- [Icones](https://icones.js.org/)
 - [IconPark--字节跳动图标库](https://iconpark.oceanengine.com/) 
 - [Font Awesome--提供了可缩放的矢量图标，可以使用CSS所提供的所有特性对它们进行更改](https://fontawesome.com/docs)
 - [Bootstrap Icons--Bootstrap 开源的 SVG 图标库](https://icons.getbootstrap.com/#usage)
