--- a/开源项目.md
+++ b/开源项目.md
@@ -27,6 +27,7 @@
 - [vue-admin-better](https://github.com/chuzhixin/vue-admin-better)
 - [vue-element-admin](https://github.com/PanJiaChen/vue-element-admin)
 - [vue-vben-admin](https://github.com/vbenjs/vue-vben-admin)
+- [soybean admin](https://docs.soybean.pro/)
 - 
 #### 工作流项目
 - [json-flow--审批工作流自研引擎系统](https://jackrolling.gitee.io/docsify/#/)
