--- a/前端组件.md
+++ b/前端组件.md
@@ -9,6 +9,7 @@
 - [Naive UI--一款基于当前比较新的 Vue 3.0/TypeScript 技栈开发的前端 UI 组件库](https://www.naiveui.com/)
 - [HeyUI--一个基于Vue.js的高质量UI组件库,支持vue2&vue3](https://www.heyui.top/)
 - [Undraw UI--一个 Vue 3 组件库,基于vue3的UI组件，主要功能有折叠，评论，锚点，搜索，聊天](https://undraw.gitee.io/undraw-ui/)
+- [opentiny--华为云企业级设计体系，适配 PC 端 / 移动端等多端，涵盖 Vue2 / Vue3 / Angular 多技术栈](https://opentiny.design/)
 
 #### 小程序 UI
 - [TDesign小程序组件库--腾讯的设计系统 TDesign 适配微信小程序的组件库](https://github.com/Tencent/tdesign-miniprogram)
