--- a/日常工具.md
+++ b/日常工具.md
@@ -7,6 +7,7 @@
 - [帮小忙--腾讯在线工具箱平台](https://tool.browser.qq.com/)
 - [在线工具--在线程序员工具箱](https://tool.lu/)
 - [密码学工具箱](https://crypto-online.cn/)
+- [AI工具集](https://ai-bot.cn/)
   
 #### 工具
 - [sqlzoo--一个免费的SQL学习练习网站](https://sqlzoo.net/wiki/SELECT_basics/zh)
