--- a/开源项目.md
+++ b/开源项目.md
@@ -22,7 +22,7 @@
 #### 后端模板项目
 - [surveyking--功能最强大的调查问卷系统和考试系统](https://gitee.com/surveyking/surveyking/)
 - [ruoyi--基于 Vue/Element UI 和 Spring Boot/Spring Cloud & Alibaba 前后端分离的分布式微服务架构](http://doc.ruoyi.vip/)
-
+- [SnowyAdmin--国内首个国密前后分离快速开发平台，采用Vue3+AntDesignVue3 + Vite+SpringBoot+Mp+HuTool+SaToken](https://xiaonuo.vip/)
 #### 前端模板项目
 - [vue-admin-better](https://github.com/chuzhixin/vue-admin-better)
 - [vue-element-admin](https://github.com/PanJiaChen/vue-element-admin)
