--- a/开源项目.md
+++ b/开源项目.md
@@ -14,6 +14,7 @@
 - [CosId--通用、灵活、高性能的分布式ID生成器](https://gitee.com/AhooWang/CosId/)
 - [lunar-java--一款无第三方依赖的公历(阳历)、农历(阴历、老黄历)、道历、佛历工具](https://gitee.com/6tail/lunar-java/)
 - [Luckysheet--一款纯前端类似excel的在线表格](https://gitee.com/mengshukeji/Luckysheet/)
+- [Bean Searcher--专注高级查询的只读 ORM，天生支持联表，免 DTO/VO 转换，使一行代码实现复杂列表检索](https://bs.zhxu.cn/)
 
 #### 低代码项目
 - [dooringx--开箱即用的H5可视化搭建框架，轻松搭建自己的可视化搭建平台](https://gitee.com/lowcode-china/dooringx)
