--- a/图标图库.md
+++ b/图标图库.md
@@ -4,6 +4,7 @@
 #### 矢量
 
 - [undraw](https://undraw.co/illustrations)
+- [manypixels--无版权免费的插图](https://www.manypixels.co/gallery/)
 
 #### 图标
 
@@ -15,6 +16,17 @@
 - [Svgrepo--SVG图标](https://www.svgrepo.com/)
 - [Icongo--开源的图标搜索引擎](https://icongo.github.io/)
 - [Free3Dicon--3D icon图标](https://free3dicon.com/)
+- [flaticon--为设计师制作的 PNG、SVG、EPS、PSD 和 CSS 图标图库](https://www.flaticon.com/)
+- [iconstore--图标下载](https://iconstore.co/)
+- [macosicons--mac软件图标](https://macosicons.com/)
+- [feathericons--微软出品矢量图标](https://feathericons.com/)
+- [heroicons--tailwind出品矢量图标](https://heroicons.com/)
+- [healthicons--医疗相关图标](https://healthicons.org/)
+- [icons8--图标下载](https://icons8.com/)
+- [lineicons--线性图标部分收费](https://lineicons.com/)
+- [tabler-icons--开源图标](https://tabler-icons.io/)
+- [ionic--开源图标](https://ionic.io/ionicons)
+- [mingcute--图标库](https://www.mingcute.com/)
 
 #### 图库
 
