--- a/配色工具.md
+++ b/配色工具.md
@@ -5,5 +5,8 @@
 - [Color Hunt](https://colorhunt.co/)
 - [设计师网址导航--配色](https://color.uisdc.com/pick.html)
 - [khroma--AI配色](http://khroma.co/train/)
+- [webgradients--渐变色](https://webgradients.com/)
+- [flatuicolors--扁平化配色](https://flatuicolors.com/)
+- [uigradients--渐变色取色](https://uigradients.com/)
 
   
