--- a/前端组件.md
+++ b/前端组件.md
@@ -33,6 +33,7 @@
 
 #### 图表库
 - [Echarts--一个基于JavaScript的开源可视化图表库](https://echarts.apache.org/zh/index.html)
+- [create-chart--基于Echarts的可视化数据大屏设计器（包含设计、预览、分享等全部流程）](https://github.com/food-billboard/create-chart)
 
 
 #### vue插件
