--- a/开发工具.md
+++ b/开发工具.md
@@ -56,4 +56,5 @@
 - [easypoi--快速使用poi完成Excel和word的各种操作](http://doc.wupaas.com/docs/easypoi/easypoi-1c0u4mo8p4ro8)
 - [XXL开源社区--由职业研发人员倾情打造，致力于提供多领域的开源技术方案](https://www.xuxueli.com/)
 - [relationship--中国亲戚关系计算器,开源算法](https://passer-by.com/relationship/)
+- [wails--使用 Go HTML CSS 构建漂亮的跨平台应用程序](https://wails.io/zh-Hans/)
 
