--- a/学习阅读.md
+++ b/学习阅读.md
@@ -6,6 +6,7 @@
 - [掘金](https://juejin.cn/)
 - [微信阅读](https://weread.qq.com/)
 - [infoQ](https://www.infoq.cn/)
+- [计算机专业学习路线](https://hackway.org/docs/cs/intro)
 - [后盾人](https://doc.houdunren.com/)
 - [bugstack--重学Java设计模式](https://bugstack.cn/)
 - [ins--开源灵感数据库](https://github.com/zhaoolee/ins)
