--- a/开源项目.md
+++ b/开源项目.md
@@ -15,6 +15,7 @@
 - [lunar-java--一款无第三方依赖的公历(阳历)、农历(阴历、老黄历)、道历、佛历工具](https://gitee.com/6tail/lunar-java/)
 - [Luckysheet--一款纯前端类似excel的在线表格](https://gitee.com/mengshukeji/Luckysheet/)
 - [Bean Searcher--专注高级查询的只读 ORM，天生支持联表，免 DTO/VO 转换，使一行代码实现复杂列表检索](https://bs.zhxu.cn/)
+- [nvm--node版本管理工具](https://github.com/coreybutler/nvm-windows)
 
 #### 低代码项目
 - [dooringx--开箱即用的H5可视化搭建框架，轻松搭建自己的可视化搭建平台](https://gitee.com/lowcode-china/dooringx)
@@ -24,6 +25,7 @@
 - [surveyking--功能最强大的调查问卷系统和考试系统](https://gitee.com/surveyking/surveyking/)
 - [ruoyi--基于 Vue/Element UI 和 Spring Boot/Spring Cloud & Alibaba 前后端分离的分布式微服务架构](http://doc.ruoyi.vip/)
 - [SnowyAdmin--国内首个国密前后分离快速开发平台，采用Vue3+AntDesignVue3 + Vite+SpringBoot+Mp+HuTool+SaToken](https://xiaonuo.vip/)
+
 #### 前端模板项目
 - [vue-admin-better](https://github.com/chuzhixin/vue-admin-better)
 - [vue-element-admin](https://github.com/PanJiaChen/vue-element-admin)
@@ -33,4 +35,10 @@
 #### 工作流项目
 - [json-flow--审批工作流自研引擎系统](https://jackrolling.gitee.io/docsify/#/)
 - [smart-flow-design--仿钉钉、飞书、雀书、流程审批设计](https://gitee.com/crowncloud/smart-flow-design/)
+
+#### 知识管理
+- [think--审批工作流自研引擎系统](https://github.com/fantasticit/think)
+- [sparrow--实现语雀的50%功能,基本满足企业内部知识平台的需要](https://github.com/leizhu900516/sparrow)
+
+
   
