--- a/日常工具.md
+++ b/日常工具.md
@@ -10,9 +10,11 @@
 - [AI工具集](https://ai-bot.cn/)
   
 #### 工具
+- [qwerty--打字练习](https://qwerty.kaiyi.cool/)
 - [sqlzoo--一个免费的SQL学习练习网站](https://sqlzoo.net/wiki/SELECT_basics/zh)
 - [humanbenchmark--人类基准反应时间测试](https://humanbenchmark.com/tests/reactiontime)
 - [jsont--JSON在线查看、xml/yaml转换](https://www.jsont.run/)
 - [json可视化--json可视化渲染成表格](https://altearius.github.io/tools/json/index.html)
+- [Herowand Editor--一个网页工具，可以将 JSON、XML、YAML、TOML 格式的数据可视化展示。](https://editor.herowand.com/)
 - [Device Frames--制作智能手机、平板电脑、笔记本的 3D 展示图片](https://deviceframes.com/)
 
