--- a/设计工具.md
+++ b/设计工具.md
@@ -11,11 +11,8 @@
 - [可画canva--在线设计协作平台](https://www.canva.cn/)
 - [colorfu--做壁纸和海报，免费开源](https://github.com/pearmini/colorfu)
 - [基于fabric.js和Vue的图片编辑器](https://github.com/nihaojob/vue-fabric-editor)
-
-
-
-#### 图片处理
 - [upscayl--一个开源软件，可以将图片从低分辨率变成高分辨率，变得更清晰](https://github.com/upscayl/upscayl)
+- [jellylade--一个美化网页截图的 Web 工具](https://app.jellylade.com/)
 
 
 #### 小程序组件
