--- a/设计工具.md
+++ b/设计工具.md
@@ -7,6 +7,7 @@
 - [pixso](https://pixso.cn/)
 
 #### 图片处理
+- [图标工厂--一键生成所有尺寸的应用图标](https://icon.wuruihong.com/)
 - [制作图](https://www.zhizuotu.com/)
 - [可画canva--在线设计协作平台](https://www.canva.cn/)
 - [colorfu--做壁纸和海报，免费开源](https://github.com/pearmini/colorfu)
