--- a/日常工具.md
+++ b/日常工具.md
@@ -17,4 +17,5 @@
 - [json可视化--json可视化渲染成表格](https://altearius.github.io/tools/json/index.html)
 - [Herowand Editor--一个网页工具，可以将 JSON、XML、YAML、TOML 格式的数据可视化展示。](https://editor.herowand.com/)
 - [Device Frames--制作智能手机、平板电脑、笔记本的 3D 展示图片](https://deviceframes.com/)
+- [komorebi--Windows 系统的窗口管理器，自动在桌面编排多个应用程序窗口](https://github.com/LGUG2Z/komorebi)
 
