--- a/学习阅读.md
+++ b/学习阅读.md
@@ -3,6 +3,8 @@
 #### 阅读
 
 - [阮一峰日志](http://www.ruanyifeng.com/blog/)
+- [indiehackers--独立创造者故事(产品)](https://www.indiehackers.com/)
+- [写作营销手法学习](https://backlinko.com/content-marketing-this-year)
 - [掘金](https://juejin.cn/)
 - [微信阅读](https://weread.qq.com/)
 - [infoQ](https://www.infoq.cn/)
