--- a/日常工具.md
+++ b/日常工具.md
@@ -8,6 +8,7 @@
 - [在线工具--在线程序员工具箱](https://tool.lu/)
 - [密码学工具箱](https://crypto-online.cn/)
 - [AI工具集](https://ai-bot.cn/)
+- [stockai--基于ChatGPT的AI选股工具](https://stockai.trade/)
   
 #### 工具
 - [qwerty--打字练习](https://qwerty.kaiyi.cool/)
