--- a/学习阅读.md
+++ b/学习阅读.md
@@ -3,7 +3,6 @@
 #### 阅读
 
 - [阮一峰日志](http://www.ruanyifeng.com/blog/)
-- [indiehackers--独立创造者故事(产品)](https://www.indiehackers.com/)
 - [写作营销手法学习](https://backlinko.com/content-marketing-this-year)
 - [掘金](https://juejin.cn/)
 - [微信阅读](https://weread.qq.com/)
@@ -13,3 +12,11 @@
 - [bugstack--重学Java设计模式](https://bugstack.cn/)
 - [ins--开源灵感数据库](https://github.com/zhaoolee/ins)
 - [句子控--收集与分享你喜欢的句子](https://www.juzikong.com/)
+- [什么值得读网站](https://www.shenmezhidedu.com/)
+
+#### 独立开发者
+
+- [w2solo--独立开发者社区](http://w2solo.com/)
+- [indiehackers--独立创造者故事(产品)](https://www.indiehackers.com/)
+- [sideproject--独立开发项目指南](https://sideproject.guide/)
+- [创造者日报](https://creatorsdaily.com/)
