--- a/设计工具.md
+++ b/设计工具.md
@@ -14,6 +14,8 @@
 - [基于fabric.js和Vue的图片编辑器](https://github.com/nihaojob/vue-fabric-editor)
 - [upscayl--一个开源软件，可以将图片从低分辨率变成高分辨率，变得更清晰](https://github.com/upscayl/upscayl)
 - [jellylade--一个美化网页截图的 Web 工具](https://app.jellylade.com/)
+- [shots--一个美化网页截图的 Web 工具](https://shots.so/)
+
 
 
 #### 小程序组件
