--- a/图标图库.md
+++ b/图标图库.md
@@ -39,3 +39,4 @@
 
 - [unicode-symbol](https://ajlovechina.github.io/awesome-unicode-symbol/index.html)
 - [符号大全](http://www.fhdq.net/)
+- [emojixd--线上Emoji百科全书📚，收录了所有emoji](http://emojixd.com/)
