--- a/设计工具.md
+++ b/设计工具.md
@@ -5,6 +5,9 @@
 - [墨刀--产品设计协作平台](https://modao.cc/)
 - [penpot](https://design.penpot.app/)
 - [pixso](https://pixso.cn/)
+- [wodisign--设计协作平台](https://www.wodisign.com/)
+- [ajietextd--手绘风格画图工具](https://ajietextd.github.io/)
+
 
 #### 图片处理
 - [图标工厂--一键生成所有尺寸的应用图标](https://icon.wuruihong.com/)
