--- a/前端组件.md
+++ b/前端组件.md
@@ -55,6 +55,7 @@
 - [vue-easytable--基于 Vue2 开发的表格组件，可作为excel使用](http://huangshuwei.gitee.io/vue-easytable/#/en/demo)
 - [ag-grid--媲美excel的表格组件](https://www.ag-grid.com/vue-data-grid/getting-started)
 
+
 #### 样式大全
 - [navnav--组件样式开发学习](https://navnav.co/)
 
@@ -62,3 +63,10 @@
 #### JavaScript
 - [Fasty--一个极快的 JavaScript 模板引擎](https://gitee.com/fuhai/fasty/)
 - [cnchar--功能全面、多端支持的汉字拼音笔画 js 库](https://gitee.com/theajack/cnchar/)
+
+
+#### 小程序组件
+- [wx-caman--基于 CamanJS 的微信小程序 Canvas 像素级滤镜处理库](https://github.com/ChrisCindy/wx-caman)
+- [wxapp-market--小程序营销组件](https://github.com/o2team/wxapp-market)
+- [sprite-wxapp--小程序的图形绘制和实现各种动画效果](https://github.com/spritejs/sprite-wxapp)
+- [Painter--一款轻量级的小程序海报生成组件](https://github.com/Kujiale-Mobile/Painter)
