--- a/学习阅读.md
+++ b/学习阅读.md
@@ -20,3 +20,4 @@
 - [indiehackers--独立创造者故事(产品)](https://www.indiehackers.com/)
 - [sideproject--独立开发项目指南](https://sideproject.guide/)
 - [创造者日报](https://creatorsdaily.com/)
+- [新趣集--产品发现社区，发现最新的网站，移动App和技术产品](https://xinquji.com/)
