--- a/设计工具.md
+++ b/设计工具.md
@@ -20,9 +20,8 @@
 - [shots--一个美化网页截图的 Web 工具](https://shots.so/)
 
 
+#### UI
+- [美叶--应用、网页、B端优质灵感辑录](https://www.meiye.art/)
 
-#### 小程序组件
-- [wx-caman--基于 CamanJS 的微信小程序 Canvas 像素级滤镜处理库](https://github.com/ChrisCindy/wx-caman)
-- [wxapp-market--小程序营销组件](https://github.com/o2team/wxapp-market)
-- [sprite-wxapp--小程序的图形绘制和实现各种动画效果](https://github.com/spritejs/sprite-wxapp)
-- [Painter--一款轻量级的小程序海报生成组件](https://github.com/Kujiale-Mobile/Painter)
+
+
