--- a/日常工具.md
+++ b/日常工具.md
@@ -9,6 +9,7 @@
 - [密码学工具箱](https://crypto-online.cn/)
 - [AI工具集](https://ai-bot.cn/)
 - [stockai--基于ChatGPT的AI选股工具](https://stockai.trade/)
+- [similarweb--站点流量 查看并分析任何网站](https://www.similarweb.com/)
   
 #### 工具
 - [qwerty--打字练习](https://qwerty.kaiyi.cool/)
