--- a/设计工具.md
+++ b/设计工具.md
@@ -7,7 +7,7 @@
 - [pixso](https://pixso.cn/)
 - [wodisign--设计协作平台](https://www.wodisign.com/)
 - [ajietextd--手绘风格画图工具](https://ajietextd.github.io/)
-
+- [aicolors--AI生成主题色](https://aicolors.co/)
 
 #### 图片处理
 - [图标工厂--一键生成所有尺寸的应用图标](https://icon.wuruihong.com/)
