--- a/学习阅读.md
+++ b/学习阅读.md
@@ -10,9 +10,11 @@
 - [计算机专业学习路线](https://hackway.org/docs/cs/intro)
 - [后盾人](https://doc.houdunren.com/)
 - [bugstack--重学Java设计模式](https://bugstack.cn/)
+- [凤凰架构](http://icyfenix.cn/)
 - [ins--开源灵感数据库](https://github.com/zhaoolee/ins)
 - [句子控--收集与分享你喜欢的句子](https://www.juzikong.com/)
 - [什么值得读网站](https://www.shenmezhidedu.com/)
+
 
 #### 独立开发者
 
@@ -21,3 +23,9 @@
 - [sideproject--独立开发项目指南](https://sideproject.guide/)
 - [创造者日报](https://creatorsdaily.com/)
 - [新趣集--产品发现社区，发现最新的网站，移动App和技术产品](https://xinquji.com/)
+
+
+#### 文章
+
+- [Git 内部原理的快速介绍（英文）](https://sites.google.com/a/chromium.org/dev/developers/fast-intro-to-git-internals)
+- [哈希是什么](https://samwho.dev/hashing/)
