--- a/开发工具.md
+++ b/开发工具.md
@@ -43,6 +43,11 @@
 - [sm.ms](https://sm.ms/)
 
 
+#### 工具
+- [kafka-console-ui--kafka可视化管理平台](https://github.com/xxd763795151/kafka-console-ui)
+
+
+
 #### 项目文档
 - [docsify](https://docsify.js.org/#/zh-cn/)
 - [liteflow](https://liteflow.yomahub.com/)
