--- a/学习阅读.md
+++ b/学习阅读.md
@@ -11,6 +11,8 @@
 - [后盾人](https://doc.houdunren.com/)
 - [bugstack--重学Java设计模式](https://bugstack.cn/)
 - [凤凰架构](http://icyfenix.cn/)
+- [Chromium中文文档](https://ahangchen.gitbooks.io/chromium_doc_zh/content/zh/)
+- [技术文章摘抄](http://learn.lianglianglee.com/)
 - [ins--开源灵感数据库](https://github.com/zhaoolee/ins)
 - [句子控--收集与分享你喜欢的句子](https://www.juzikong.com/)
 - [什么值得读网站](https://www.shenmezhidedu.com/)
