--- a/开发指南.md
+++ b/开发指南.md
@@ -12,3 +12,5 @@
 
 #### java
 - [Spring中文文档](https://springdoc.cn/)
+- [代码整洁之道](https://wonderwater.gitbooks.io/clean_architecture_zh/content/)
+- [API-design-guide](https://github.com/archnotes/gitbook/tree/master/API-design-guide)
