--- a/学习阅读.md
+++ b/学习阅读.md
@@ -1,6 +1,6 @@
 > 分类：学习阅读
 
-#### 阅读
+#### 学习
 
 - [阮一峰日志](http://www.ruanyifeng.com/blog/)
 - [写作营销手法学习](https://backlinko.com/content-marketing-this-year)
@@ -16,7 +16,22 @@
 - [ins--开源灵感数据库](https://github.com/zhaoolee/ins)
 - [句子控--收集与分享你喜欢的句子](https://www.juzikong.com/)
 - [什么值得读网站](https://www.shenmezhidedu.com/)
+- [探索互联网高质量内容](https://immersivetranslate.com/docs/sites/)
+- [一个聚合了 500 多个程序员博客的时间流](https://engineeringblogs.xyz/)
 
+#### 眼界
+
+- [buzzing--国外热门新闻双语快速浏览](https://www.buzzing.cc/)
+- [国外网址导航](https://shuziyimin.org/)
+- [Hacker News--质量最高的科技社区](https://news.ycombinator.com/news)
+- [Hacker News Search](https://hn.algolia.com/)
+- [ACM Tech News](https://technews.acm.org/)
+- [Ars Technica--质量最高的科技报道网站](https://arstechnica.com/)
+- [brutalist--聚合最权威的报道](https://brutalist.report/)
+- [spike--设计良好的聚合新闻](https://spike.news/)
+- [Entertaining space--无聊，不知道看点什么？这里有一些推荐](https://neal.fun/)
+- []()
+- []()
 
 #### 独立开发者
 
@@ -25,6 +40,10 @@
 - [sideproject--独立开发项目指南](https://sideproject.guide/)
 - [创造者日报](https://creatorsdaily.com/)
 - [新趣集--产品发现社区，发现最新的网站，移动App和技术产品](https://xinquji.com/)
+- [Reddit 业余项目小组](https://www.reddit.com/r/SideProject/?rdt=52547)
+- [Hacker News 产品自荐](https://news.ycombinator.com/show)
+- [Website Hunt--发现好网站](https://www.websitehunt.co/popular)
+
 
 
 #### 文章
