--- a/日常工具.md
+++ b/日常工具.md
@@ -21,3 +21,6 @@
 - [Device Frames--制作智能手机、平板电脑、笔记本的 3D 展示图片](https://deviceframes.com/)
 - [komorebi--Windows 系统的窗口管理器，自动在桌面编排多个应用程序窗口](https://github.com/LGUG2Z/komorebi)
 
+#### 谷歌插件
+- [沉浸式翻译](https://immersivetranslate.com/)
+
