--- a/日常工具.md
+++ b/日常工具.md
@@ -20,6 +20,7 @@
 - [Herowand Editor--一个网页工具，可以将 JSON、XML、YAML、TOML 格式的数据可视化展示。](https://editor.herowand.com/)
 - [Device Frames--制作智能手机、平板电脑、笔记本的 3D 展示图片](https://deviceframes.com/)
 - [komorebi--Windows 系统的窗口管理器，自动在桌面编排多个应用程序窗口](https://github.com/LGUG2Z/komorebi)
+- [pddon--在线画图工具，提供低代码和 AI 智能辅助工具](https://pddon.com/)
 
 #### 谷歌插件
 - [沉浸式翻译](https://immersivetranslate.com/)
