--- a/学习阅读.md
+++ b/学习阅读.md
@@ -45,6 +45,46 @@
 - [Website Hunt--发现好网站](https://www.websitehunt.co/popular)
 
 
+#### Blog
+
+- [爱奇艺技术产品团队](https://www.infoq.cn/profile/8307336C925D3C/publish)
+- [百度Web前端研发部](https://fex.baidu.com/)
+- [字节跳动技术团队](https://juejin.cn/user/1838039172387262/posts)
+- [腾讯全端 AlloyTeam 团队 Blog](http://www.alloyteam.com/page/0/)
+- [京东零售官方设计共享平台](https://jelly.jd.com/)
+- [腾讯CDC](https://cdc.tencent.com/percipience)
+- [Glow 技术团队博客](https://tech.glowing.com/cn/)
+- [w3cplus](http://www.w3cplus.com/)
+- [印记中文--前端技术文档](https://docschina.org/)
+- [W3CTech](https://www.w3ctech.com/topic/all)
+- [腾讯ISUX](https://isux.tencent.com/)
+- [腾讯游戏TGideas](https://tgideas.qq.com/)
+- [蓝色理想--网站设计](http://www.blueidea.com/)
+- [爱思资源网--专注WEB前端的资源网站](http://www.aseoe.com/)
+- [美团技术团队](https://tech.meituan.com/)
+- [阿里技术](https://102.alibaba.com/)
+- [阿里巴巴中间件](https://developer.aliyun.com/group/aliware/article_hot)
+- [Thoughtworks洞见](https://insights.thoughtworks.cn/)
+- [小米信息部技术团队](https://xiaomi-info.github.io/)
+- [360 核心安全技术博客](https://blogs.360.cn/)
+- [伴鱼技术团队](https://tech.ipalfish.com/blog/)
+- [滴滴云博客](https://blog.didiyun.com/)
+- [滴滴技术](https://www.infoq.cn/profile/9FF5D5F89F3BC7/publish)
+- [吴亮(月影)--致力于Javasript技术和web标准的推广](https://www.zhihu.com/people/yue-ying-2-61)
+- [吕小鸣前端博客](https://www.nihaoshijie.com.cn/)
+- [徐宥](https://blog.youxu.info/)
+- [CoolShell](https://coolshell.cn/)
+- [池建强的随想录](https://macshuo.com/)
+- [刘未鹏](http://mindhacks.cn/)
+- [老赵（资深码农）](http://blog.zhaojie.me/)
+- [王垠](http://www.yinwang.org/)
+- [风雪之隅-Laruence的博客，微博平台架构师，PHP大牛](https://www.laruence.com/)
+- [后端技术 by Tim Yang](https://timyang.net/)
+- [cenalulu's Tech Blog](http://cenalulu.github.io/)
+
+- [王建硕](http://home.wangjianshuo.com/cn/20100524_aeeeie_caee.htm)
+- [安全小飞侠](http://avfisher.win/)
+- [张鑫旭网站--专注web前端偏前领域](https://www.zhangxinxu.com/)
 
 #### 文章
 
