--- a/前端组件.md
+++ b/前端组件.md
@@ -21,6 +21,7 @@
 #### Web UI
 - [Layui--开源模块化前端 UI 组件库](https://layuion.com/)
 - [semantic-ui](https://semantic-ui.com/)
+- [semantic-ui-vue](https://semantic-ui-vue.github.io/#/)
 - [quark-design--一款基于 Web Components 的跨框架 UI 组件库,任意框架或无框架中使用](https://quark-design.hellobike.com/?mode=dark#/)
 - [uiverse--免费开源的数百个 UI 元素](https://uiverse.io/)
 - [stdf--基于 Svelte 与 Tailwind 的移动页面组件库](https://stdf.design/#/guide)
