--- a/软件应用.md
+++ b/软件应用.md
@@ -1,5 +1,15 @@
 > 分类：软件应用
 
+#### AI应用
+- [文心一言](https://yiyan.baidu.com/)
+- [智谱清言](https://chatglm.cn/)
+- [讯飞星火](https://xinghuo.xfyun.cn/)
+- [腾讯混元](https://hunyuan.tencent.com/)
+- [通义千问](https://qianwen.aliyun.com/)
+
+
 #### 软件应用
 - [Mindbox--一款结构化的知识管理软件](https://amindbox.com/)
+
+
 
