--- a/学习阅读.md
+++ b/学习阅读.md
@@ -47,6 +47,9 @@
 
 #### Blog
 
+- [开发者头条](https://toutiao.io/posts/hot/7)
+- [阿里云开发者社区](https://developer.aliyun.com/)
+- [腾讯云开发者社区](https://cloud.tencent.com/developer)
 - [爱奇艺技术产品团队](https://www.infoq.cn/profile/8307336C925D3C/publish)
 - [字节跳动技术团队](https://juejin.cn/user/1838039172387262/posts)
 - [京东零售官方设计共享平台](https://jelly.jd.com/)
@@ -70,12 +73,7 @@
 - [滴滴技术](https://www.infoq.cn/profile/9FF5D5F89F3BC7/publish)
 - [吴亮(月影)--致力于Javasript技术和web标准的推广](https://www.zhihu.com/people/yue-ying-2-61)
 - [吕小鸣前端博客](https://www.nihaoshijie.com.cn/)
-- [徐宥](https://blog.youxu.info/)
 - [CoolShell](https://coolshell.cn/)
-- [池建强的随想录](https://macshuo.com/)
-- [刘未鹏](http://mindhacks.cn/)
-- [老赵（资深码农）](http://blog.zhaojie.me/)
-- [王垠](http://www.yinwang.org/)
 - [风雪之隅-Laruence的博客，微博平台架构师，PHP大牛](https://www.laruence.com/)
 - [后端技术 by Tim Yang](https://timyang.net/)
 - [cenalulu's Tech Blog](http://cenalulu.github.io/)
