--- a/图标图库.md
+++ b/图标图库.md
@@ -27,6 +27,7 @@
 - [tabler-icons--开源图标](https://tabler-icons.io/)
 - [ionic--开源图标](https://ionic.io/ionicons)
 - [mingcute--图标库](https://www.mingcute.com/)
+- [yesicon--精选全球高品质、开源、免费的矢量图标库](https://yesicon.app/)
 
 #### 图库
 
