--- a/学习阅读.md
+++ b/学习阅读.md
@@ -18,6 +18,7 @@
 - [什么值得读网站](https://www.shenmezhidedu.com/)
 - [探索互联网高质量内容](https://immersivetranslate.com/docs/sites/)
 - [一个聚合了 500 多个程序员博客的时间流](https://engineeringblogs.xyz/)
+- [Hello算法](https://www.hello-algo.com/)
 
 
 #### 眼界
@@ -31,6 +32,10 @@
 - [brutalist--聚合最权威的报道](https://brutalist.report/)
 - [spike--设计良好的聚合新闻](https://spike.news/)
 - [Entertaining space--无聊，不知道看点什么？这里有一些推荐](https://neal.fun/)
+- [Rss-IT--记录了个人订阅的一些科技人的 Blog 地址](https://github.com/Gracker/Rss-IT)
+- [中文独立博客列表](https://github.com/timqian/chinese-independent-blogs)
+- [Front-End RSS--每天定时抓取最新前端技术文章](https://github.com/ChanceYu/front-end-rss)
+- [中文安全RSS](https://github.com/zhengjim/Chinese-Security-RSS)
 
 
 #### 独立开发者
