--- a/开发指南.md
+++ b/开发指南.md
@@ -4,7 +4,7 @@
 - [树状视图的 CSS 实现](https://iamkate.com/code/tree-views/)
 - [CSS命名规范与常用CSS代码集合](https://juejin.cn/post/6844904053839757326)
 - [CSS常用命名名称](https://www.cnblogs.com/john-jxsr/p/8399443.html)
-
+- [有趣的CSS](https://funcss.liujueyi.cn/)
 
 #### 运维
 - [Linux 环境如何使用 kill 命令优雅停止 Java 服务](https://mp.weixin.qq.com/s/Fh2GX5ZHZ0Kt-_7Tz1pZkw)
