--- a/学习阅读.md
+++ b/学习阅读.md
@@ -19,6 +19,8 @@
 - [探索互联网高质量内容](https://immersivetranslate.com/docs/sites/)
 - [一个聚合了 500 多个程序员博客的时间流](https://engineeringblogs.xyz/)
 - [Hello算法](https://www.hello-algo.com/)
+- [Go 学习之路](https://github.com/yangwenmai/learning-golang)
+- [码农周刊](https://github.com/toutiaoio/weekly.manong.io)
 
 
 #### 眼界
@@ -36,6 +38,8 @@
 - [中文独立博客列表](https://github.com/timqian/chinese-independent-blogs)
 - [Front-End RSS--每天定时抓取最新前端技术文章](https://github.com/ChanceYu/front-end-rss)
 - [中文安全RSS](https://github.com/zhengjim/Chinese-Security-RSS)
+- [favorite link--收集喜欢的网址](https://www.guanguans.cn/favorite-link/)
+- [中文区优质rss源](https://github.com/weekend-project-space/top-rss-list)
 
 
 #### 独立开发者
