--- a/学习阅读.md
+++ b/学习阅读.md
@@ -34,6 +34,8 @@
 - [brutalist--聚合最权威的报道](https://brutalist.report/)
 - [spike--设计良好的聚合新闻](https://spike.news/)
 - [Entertaining space--无聊，不知道看点什么？这里有一些推荐](https://neal.fun/)
+- [HackWay技术学习路线](https://hackway.org/)
+- [52nlp--自然语言处理](https://www.52nlp.cn/)
 - [Rss-IT--记录了个人订阅的一些科技人的 Blog 地址](https://github.com/Gracker/Rss-IT)
 - [中文独立博客列表](https://github.com/timqian/chinese-independent-blogs)
 - [Front-End RSS--每天定时抓取最新前端技术文章](https://github.com/ChanceYu/front-end-rss)
@@ -52,6 +54,7 @@
 - [Reddit 业余项目小组](https://www.reddit.com/r/SideProject/?rdt=52547)
 - [Hacker News 产品自荐](https://news.ycombinator.com/show)
 - [Website Hunt--发现好网站](https://www.websitehunt.co/popular)
+- [小众软件](https://www.appinn.com/)
 
 
 #### Blog
