--- a/开发指南.md
+++ b/开发指南.md
@@ -9,8 +9,12 @@
 #### 运维
 - [Linux 环境如何使用 kill 命令优雅停止 Java 服务](https://mp.weixin.qq.com/s/Fh2GX5ZHZ0Kt-_7Tz1pZkw)
 
+#### Nginx
+- [ngx_http_secure_link_module](http://nginx.org/en/docs/http/ngx_http_secure_link_module.html)
 
 #### java
 - [Spring中文文档](https://springdoc.cn/)
 - [代码整洁之道](https://wonderwater.gitbooks.io/clean_architecture_zh/content/)
 - [API-design-guide](https://github.com/archnotes/gitbook/tree/master/API-design-guide)
+
+
