--- a/软件应用.md
+++ b/软件应用.md
@@ -10,6 +10,7 @@
 
 #### 软件应用
 - [Mindbox--一款结构化的知识管理软件](https://amindbox.com/)
-
+- [CopyAsk--你的指尖AI助手](https://copyask.com/)
+- [板栗看板](https://banlikanban.com/)
 
 
