--- a/开源项目.md
+++ b/开源项目.md
@@ -16,6 +16,9 @@
 - [Luckysheet--一款纯前端类似excel的在线表格](https://gitee.com/mengshukeji/Luckysheet/)
 - [Bean Searcher--专注高级查询的只读 ORM，天生支持联表，免 DTO/VO 转换，使一行代码实现复杂列表检索](https://bs.zhxu.cn/)
 - [nvm--node版本管理工具](https://github.com/coreybutler/nvm-windows)
+- [jodconverter](https://github.com/jodconverter/jodconverter)
+- [pinyin-pro--一个识别准确、性能优异的专业的汉字拼音转换库](https://pinyin-pro.cn/)
+- [keycloak--身份认证登录授权](https://github.com/keycloak/keycloak)
 
 #### 低代码项目
 - [dooringx--开箱即用的H5可视化搭建框架，轻松搭建自己的可视化搭建平台](https://gitee.com/lowcode-china/dooringx)
@@ -32,7 +35,8 @@
 - [vue-element-admin](https://github.com/PanJiaChen/vue-element-admin)
 - [vue-vben-admin](https://github.com/vbenjs/vue-vben-admin)
 - [soybean admin](https://docs.soybean.pro/)
-- 
+- [go-admin--中后台项目开发脚手架](https://www.go-admin.pro/)
+-
 #### 工作流项目
 - [json-flow--审批工作流自研引擎系统](https://jackrolling.gitee.io/docsify/#/)
 - [smart-flow-design--仿钉钉、飞书、雀书、流程审批设计](https://gitee.com/crowncloud/smart-flow-design/)
