--- a/学习阅读.md
+++ b/学习阅读.md
@@ -92,6 +92,7 @@
 - [王建硕](http://home.wangjianshuo.com/cn/20100524_aeeeie_caee.htm)
 - [安全小飞侠](http://avfisher.win/)
 - [张鑫旭网站--专注web前端偏前领域](https://www.zhangxinxu.com/)
+- [azhubaby](https://blog.azhubaby.com/)
 
 #### 文章
 
