--- a/开发工具.md
+++ b/开发工具.md
@@ -9,7 +9,7 @@
 #### 低代码
 - [fair-online--实现Flutter 线上动态化的一体化云开发平台](fair-online.58.com)
 - [flutterflow--Flutter低代码](https://flutterflow.io/)
-
+- [lafyun--云开发平台](https://www.lafyun.com/guide/)
 
 #### 云镜像
 - [华为云镜像--镜像文件下载](https://mirrors.huaweicloud.com/home)
